Added explicit mention of TinyPICO in the lib_deps to try and resolve a build issue with Docker and platformio-cli==3.6.0.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ monitor_port = /dev/cu.SLAB_USBtoUART
 lib_deps_external = 
     ; PubSubClient
     PubSubClient
+    TinyPICO Helper Library
 
 
 [env:tinypico]
