Added all library dependencies to platformio.ini and added an additional build flag to set MQTT_MAX_PACKET_SIZE at compile time rather than directly changing the source code of th elibrary.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,10 @@ build_flags =
 monitor_speed = 115200
 monitor_port = /dev/cu.SLAB_USBtoUART
 lib_deps_external = 
-    ; PubSubClient
     PubSubClient
-    TinyPICO Helper Library
+    ArduinoJson
+    AsyncTCP
+    ESP Async WebServer
 
 
 [env:tinypico]
@@ -36,9 +37,13 @@ monitor_speed = ${common.monitor_speed}
 monitor_port = ${common.monitor_port}
 
 ;extra_scripts = ${common.extra_scripts}
-build_flags = ${common.build_flags} ; -D NO_EXTRA_4K_HEAP
+build_flags = 
+    ${common.build_flags}
+    -DMQTT_MAX_PACKET_SIZE=512
 
-lib_deps = ${common.lib_deps_external}
+lib_deps =
+    ${common.lib_deps_external}
+    TinyPICO Helper Library
 
 ; upload_protocol = espota
 ; upload_port = "myesp32.local"
