Updated platformio.ini to match Arduino IDE settings and removed FW_VERSION from main.*.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,41 +10,54 @@
 
 [common]
 build_flags = 
-    -DVERSION="0.1.0"
-    -DCORE_DEBUG_LEVEL=5
+    -DFW_VERSION="0.1.0"
+    ; None = 0
+    ; Error = 1
+    ; Warn = 2
+    ; Info = 3
+    ; Debug = 4
+    ; Verbose = 5
+    -DCORE_DEBUG_LEVEL=0
 ;extra_scripts = pre:extra_script.py
 monitor_speed = 115200
 monitor_port = /dev/cu.SLAB_USBtoUART
-lib_deps_external = 
-    PubSubClient
+upload_speed = 921600
+upload_port = /dev/cu.SLAB_USBtoUART
+lib_deps_external =
     ArduinoJson
     AsyncTCP
-    ESP Async WebServer
-
+    ESP Async WebServer 
+    PubSubClient
 
 [env:tinypico]
 platform = espressif32
 board = tinypico
 framework = arduino
-
-board_build.mcu = esp32
-board_build.variant = pico32
-board_build.f_cpu = 240000000L
-board_build.f_flash = 40000000L
+; Options are: 240, 160, 80, 40, 20 and 10 MHz
+; The minimum frequency for stable WiFi is 80Mhz
+board_build.f_cpu =  80000000L
 board_build.flash_mode = qio
 
 monitor_speed = ${common.monitor_speed}
 monitor_port = ${common.monitor_port}
 
-;extra_scripts = ${common.extra_scripts}
-build_flags = 
-    ${common.build_flags}
-    -DMQTT_MAX_PACKET_SIZE=512
-
-lib_deps =
-    ${common.lib_deps_external}
-    TinyPICO Helper Library
+upload_port = ${common.upload_port}
+upload_speed = ${common.upload_speed}
 
 ; upload_protocol = espota
 ; upload_port = "myesp32.local"
 ; upload_flags = -p 3232
+
+;extra_scripts = ${common.extra_scripts}
+build_flags = 
+    ${common.build_flags}
+    ; Set MQTT max packet size to 512 to prevent errors
+    -DMQTT_MAX_PACKET_SIZE=512
+    ; Disable PSRAM (the TinyPICO doesn't have it)
+    -UBOARD_HAS_PSRAM
+    ; Temporary set the log level to Verbose
+    -DCORE_DEBUG_LEVEL=5
+
+lib_deps =
+    ${common.lib_deps_external}
+    TinyPICO Helper Library
