Added initial / basic support for PCB RGB LED.

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,8 @@
 
 [common]
 build_flags = 
-    -DFW_VERSION='"0.3.5"'
+    -DFW_VERSION='"0.4.0"'
+    -DENABLE_PCB_LED
 ;extra_scripts = pre:extra_script.py
 monitor_speed = 115200
 monitor_port = /dev/cu.SLAB_USBtoUART
@@ -69,6 +70,7 @@ build_flags =
     ; Debug = 4
     ; Verbose = 5
     -DCORE_DEBUG_LEVEL=0
+    -DENABLE_TP_LED
 
 lib_deps =
     ${common.lib_deps_external}
