Added support for PCB v0.2 with rotated LED, and fixed On / Off variables.

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,7 @@ build_flags =
     ; Verbose = 5
     -DCORE_DEBUG_LEVEL=0
     -DENABLE_TP_LED
+    ;-DENABLE_V_0_2_PCB_LED_FIX
 
 lib_deps =
     ${common.lib_deps_external}
