Added support for PWM / dimming of PCB RGB led.

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@
 
 [common]
 build_flags = 
-    -DFW_VERSION='"0.4.2"'
+    -DFW_VERSION='"0.5.0"'
     -DENABLE_PCB_LED
 ;extra_scripts = pre:extra_script.py
 monitor_speed = 115200
@@ -59,9 +59,9 @@ upload_speed = ${common.upload_speed}
 ;extra_scripts = ${common.extra_scripts}
 build_flags = 
     ${common.build_flags}
-    ; Set MQTT max packet size to 512 to prevent errors
+    ; Sets MQTT max packet size to 512 to prevent errors
     -DMQTT_MAX_PACKET_SIZE=512
-    ; Disable PSRAM (the TinyPICO doesn't have it)
+    ; Disables PSRAM (the TinyPICO doesn't have it)
     -UBOARD_HAS_PSRAM
     ; None = 0
     ; Error = 1
@@ -71,6 +71,7 @@ build_flags =
     ; Verbose = 5
     -DCORE_DEBUG_LEVEL=0
     -DENABLE_TP_LED
+    ; Enables the fix for rotated RGB LED on the `Ugo-ESP32 TinyPico v2.0` PCB
     ;-DENABLE_V_0_2_PCB_LED_FIX
 
 lib_deps =
